<resources>
    <string name="app_name">AppStudioWeek1App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Push a button!</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
</resources>